Added json converter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 application.id=12
 
-data.point.url=http://int-sys.usr.space/hangman/games
+data.point.url=http\://int-sys.usr.space/hangman/games
+
+date.format=yyyy-MM-dd'T'HH:mm:ss
