--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@
 log.dir = /tmp/logs
 
 log4j.logger.org.apache.commons.httpclient.wire=INFO, applog
-log4j.logger.com.company=DEBUG, applog
+log4j.logger.com.company=INFO, applog
 log4j.logger.org.apache=ERROR, applog
 log4j.logger.org.springframework=ERROR, applog
 log4j.logger.org.hibernate=ERROR, applog
