--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
 	</dependencies>
 
 
