--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 #   DEBUG, INFO, WARN, ERROR and FATAL
 
 #log.dir = /www1/logs
-log.dir = /tmp/logs
+log.dir = logs
 
 log4j.logger.org.apache.commons.httpclient.wire=INFO, applog
 log4j.logger.com.company=INFO, applog
